# GenAI

./: .gitignore  pyproject.toml
chat_and_RAG/: Practice-1.ipynb  ticket_price.db  ticket_price.db.wal
unstructured_RAG/: Practice-2.ipynb
unstructured_RAG/knowledge-base/summaries/: contracts_summary.md  employees_summary.md  products_summary.md
