[project]
name = "genai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13.3"
dependencies = [
    "chromadb>=1.0.12",
    "dotenv>=0.9.9",
    "duckdb>=1.3.1",
    "gradio>=5.34.0",
    "ipykernel>=6.29.5",
    "langchain>=0.3.25",
    "openai>=1.87.0",
    "pip>=25.1.1",
    "spacy>=3.8.7",
    "uuid>=1.30",
]
